Add scripts to pakage.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "George Higbie <gehigbie@gmail.com>",
   "license": "MIT",
   "description": "This ReactJS app is a simple counter that simulates data binding.",
+  "scripts": {
+    "serve": "live-server /public",
+    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+  },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-preset-env": "1.5.2",
